# playground-s6e5

./: .gitignore  README.md  experiments.jsonl  pyproject.toml  requirements-frozen.txt  requirements.txt
data/splits/: holdout_v1.parquet
docs/: colab_setup.md  diary.md  engineering-plan-2026-05-14.md  pitfalls.md  reconnaissance.md
docs/versions/: v10_tabm.md  v11_blend_4way.md  v1_lgb.md  v2_lgb_te.md  v3_lgb_compxprog.md  v4_xgb.md  v5_blend_lgb_xgb.md  v6_lgb_digits.md  v7_realmlp.md  v8_blend_3way.md  v9_realmlp_big.md
harvest/v13/: diversity_report.md  manifest.json
harvest/v18/: audit.md  manifest.json
notebooks/: 01_eda.py  02_holdout_split.py  03_v1_lgb_baseline.py  04_v2_lgb_te.py  05_v3_lgb_compxprog.py  06_v4_xgb_block1.py  07_v5_blend_lgb_xgb.py  08_v6_lgb_digits.py  09_v7_realmlp.py  10_v8_blend_3way.py  11_v9_realmlp_big.py  12_v10_tabm.py  13_v11_blend_4way.py  14_v12_factory.py  15_v13_harvest.py  16_v13_blend.py  17_v14_yekenot_repro.py  18_v14b_external.py  19_v15_stats.py  20_v16_factory_yekenot.py  21_v17_blend.py  22_harvest_v2.py  23_v18_blend.py  24_progressive_blend.py  25_pipeline.py  26_curated_explorer.py  27_v20_lag_features.py  28_v20_002_lag_median.py  29_v22_tabpfn_own.py  30_v22_seed_average.py  colab_runner.ipynb
notebooks/figs/: eda_summary.md
src/: blend_math.py  config.py  curated.py  cv.py  data.py  diary.py  evaluate.py  features.py  observer.py  train.py
